# hh-vacancy-analyzer

./: .gitignore  main.py  pyproject.toml
src/: __init__.py  api.py  base_api.py  db_manager.py  hhapi.py  mockapi.py
tests/: __init__.py
