[project]
name = "hh-vacancy-analyzer"
version = "0.1.0"
description = "Fetches and analyzes job vacancies from hh.ru API using PostgreSQL."
authors = [
    {name = "Vlad Spinul",email = "shinokakaov@mail.ru"}
]
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "black (>=26.3.1,<27.0.0)",
    "mypy (>=1.20.1,<2.0.0)",
    "isort (>=8.0.1,<9.0.0)"
]

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
  | foo.py
)
'''

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
check_untyped_defs = true
strict = true
warn_unreachable = true
exclude = 'venv'
